--- a/WarehouseEcommerce/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="container h-100">
         <div class="h-100 text-center align-items-center pt-70 pb-70">
             <div class="w-100 text-white">
-                <div class="col-md-offset-4 col-md-4 background-banner">
+                <div class="offset-lg-4 col-lg-4 background-banner">
                     <h1 class="display-3">BusinessSense</h1>
                     <p class="lead mb-10">Class-Leading WMS Solutions For Your Business</p>
                     <a href="get-started" class="btn btn-group-lg custom-green">Arrange a Demonstration</a>
@@ -33,9 +33,9 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="custom-service-row">
             <a href="warehouse-management-system">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -48,7 +48,7 @@
                 </div>
             </a>
             <a href="order-management-system">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -61,7 +61,7 @@
                 </div>
             </a>
             <a href="stock-control-system">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -74,7 +74,7 @@
                 </div>
             </a>
             <a href="epod-system">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -88,9 +88,9 @@
             </a>
         </div>
 
-        <div class="row">
+        <div class="custom-service-row">
             <a href="fleet-management-system">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -103,7 +103,7 @@
                 </div>
             </a>
             <a href="yard-management">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -116,7 +116,7 @@
                 </div>
             </a>
             <a href="ecommerce">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -129,7 +129,7 @@
                 </div>
             </a>
             <a href="epos-self-service">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -143,9 +143,9 @@
             </a>
         </div>
 
-        <div class="row">
+        <div class="custom-service-row">
             <a href="mobile-van-sales">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -158,7 +158,7 @@
                 </div>
             </a>
             <a href="real-time-location-system">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -171,7 +171,7 @@
                 </div>
             </a>
             <a href="HR-time-and-attendance">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -184,7 +184,7 @@
                 </div>
             </a>
             <a href="mobile-device-management">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -197,9 +197,9 @@
                 </div>
             </a>
         </div>
-        <div class="row">
+        <div class="custom-service-row">
             <a href="digital-signage">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -212,7 +212,7 @@
                 </div>
             </a>
             <a href="shoppertrak-business-intelligence">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -225,7 +225,7 @@
                 </div>
             </a>
             <a href="loss-prevention">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
@@ -238,7 +238,7 @@
                 </div>
             </a>
             <a href="truevue-retail-rfid-solution">
-                <div class="col-md-3 col-sm-6 service-hover">
+                <div class="service-hover">
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
