--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="header-top-area d-xs-none">
             <div class="pr-30 pl-30">
                 <div class="row">
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-lg-6 col-md-6">
                         <ul class="top-right">
                             <li class="phone-1">
                                 <i class="fa fa-phone"></i>
@@ -19,7 +19,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-sm-6 d-xs-none">
+                    <div class="col-lg-6 col-md-6 d-xs-none">
                         <div class="header-icon floatright">
                             <a href="https://www.facebook.com/GaneData"><i class="fa fa-facebook"></i></a>
                             <a href="https://twitter.com/GaneData"><i class="fa fa-twitter"></i></a>
@@ -35,12 +35,12 @@
         <div class="main-menu-area" id="navbar">
             <div class="pr-30 pl-30">
                 <div class="row ptb-10 navbar-row">
-                    <div class="col-md-3 col-sm-3 col-lg-2 logo-div">
+                    <div class="col-lg-3 col-md-3 col-xl-2 logo-div">
                         <div class="logo">
                             <a href="/"><img src="~/img/logo/logo.png" alt="" width="200" /></a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-lg-6 top-menu">
+                    <div class="col-lg-6 col-md-6 col-xl-6 top-menu">
                         <div class="main-menu">
                             <nav id="primary_nav_wrap" class="header-nav">
                                 <ul>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="mobile-menu-area"></div>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-lg-4 text-right phone-n-demo">
+                    <div class="col-lg-3 col-md-3 col-xl-4 text-right phone-n-demo">
                         <ul class="phone-2">
                             <li>
                                 <i class="fa fa-phone"></i>
