--- a/WMS/Views/InventoryStocks/MoveStockWarehouse.cshtml
+++ b/WMS/Views/InventoryStocks/MoveStockWarehouse.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ganedata.Core.Entities.Domain.MoveStockVM
+﻿@model Ganedata.Core.Entities.Domain.StockMovementViewModel
 @using Ganedata.Core.Entities.Helpers
 
 @section scripts {
@@ -18,13 +18,13 @@
     ViewBag.Title = "Move Stock";
 }
 
-<h2>Move Stock (@Model.Product.Name)</h2>
+<h2>Move Stock (@Model.ProductId)</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.Product.ProductId)
-    @Html.HiddenFor(m => m.Product.Serialisable)
+    @Html.HiddenFor(m => m.ProductId)
+    @Html.HiddenFor(m => m.ProductId)
 
 
     <div class="col-md-6 pull-left">
@@ -43,7 +43,7 @@
                 @Html.ValidationMessageFor(model => model.ToLocation)
             </div>
         </div>
-        @if (!Model.Product.Serialisable)
+        @if (Model.ProductId > 0)
         {
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.Qty, htmlAttributes: new { @class = "col-md-4" })
@@ -72,7 +72,7 @@
     </div>
     <div class="input-group h-100 justify-content-center align-items-center">
         <div class="col-md-8">
-            <input type="submit" value="Adjust"  class="btn btn-default  " />
+            <input type="submit" value="Adjust" class="btn btn-default  " />
             @Html.ActionLink("Back To List", "Index", null, new { @class = "btn btn-primary" })
         </div>
     </div>
